bunch of new stuff (completion of original doc) asteroid asteroid shards laser bazooka manhunt integration fix oxygen mask rendering laser pistol laser rifle laser sniper sfx for everything

--- a/src/main/resources/assets/moonmc/lang/en_us.json
+++ b/src/main/resources/assets/moonmc/lang/en_us.json
@@ -3,11 +3,19 @@
   "item.moonmc.oxygen_mask": "Oxygen Mask",
   "item.moonmc.laser_sword": "Laser Sword",
   "item.moonmc.laser_shotgun": "Laser Shotgun",
+  "item.moonmc.laser_pistol": "Laser Pistol",
+  "item.moonmc.laser_rifle": "Laser Rifle",
+  "item.moonmc.laser_sniper": "Laser Sniper",
+  "item.moonmc.laser_bazooka": "Laser Bazooka",
   "item.moonmc.moon_rock": "Moon Rock",
   "item.moonmc.moon_man_spawn_egg": "Moon Man Spawn Egg",
+  "item.moonmc.blue_asteroid_shard": "Blue Asteroid Shard",
+  "item.moonmc.red_asteroid_shard": "Red Asteroid Shard",
+  "item.moonmc.yellow_asteroid_shard": "Yellow Asteroid Shard",
   "death.attack.ranOutOfOxygen": "%1$s slowly died due to lack of oxygen.",
   "death.attack.ranOutOfOxygen.player": "%1$s slowly died due to lack of oxygen.",
   "entity.moonmc.shotgun_shell": "Shotgun Shell",
+  "entity.moonmc.pistol_bullet": "Pistol Bullet",
   "entity.moonmc.moon_rock": "Moon Rock",
   "entity.moonmc.moon_man": "Moon Man"
 }
