loads of gun ADS improvements balancing changes optimized low-gravity mixin fix oxygen not updating when server sets it forcefully prevent rocket from kicking you for flying alien armour (dropped from alien) laser sword SFX

--- a/src/main/resources/assets/moonmc/lang/en_us.json
+++ b/src/main/resources/assets/moonmc/lang/en_us.json
@@ -13,6 +13,10 @@
   "item.moonmc.blue_asteroid_shard": "Blue Asteroid Shard",
   "item.moonmc.red_asteroid_shard": "Red Asteroid Shard",
   "item.moonmc.yellow_asteroid_shard": "Yellow Asteroid Shard",
+  "item.moonmc.alien_helmet": "Alien Helmet",
+  "item.moonmc.alien_chestplate": "Alien Chestplate",
+  "item.moonmc.alien_leggings": "Alien Leggings",
+  "item.moonmc.alien_boots": "Alien Boots",
   "item.moonmc.rocket": "Rocket Ship",
   "entity.moonmc.rocket": "Rocket Ship",
   "entity.moonmc.shotgun_shell": "Shotgun Shell",
